test/docker-compose.yaml
services:
  envoy:
    image: "envoyproxy/envoy:v1.34.2"
    volumes:
      - "./envoy.yaml:/envoy.yaml"
    command:
      - "--config-path"
      - "/envoy.yaml"
    network_mode: "host"
  consul:
    image: "hashicorp/consul:1.21.2"
    command:
      - "agent"
      - "-dev"
      - "-client=0.0.0.0"
      - "-http-port=16201"
    network_mode: "host"
