test/envoy.yaml
node:
  id: "local"
  cluster: "cluster.local"

admin:
  access_log_path: /dev/null
  profile_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 16102
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address: { address: 0.0.0.0, port_value: 16101 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: route
                  virtual_hosts:
                    - name: default
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/success-service/" }
                          route: { cluster: success-service }
                        - match: { prefix: "/fail-service/" }
                          route: { cluster: fail-service }
                        - match: { prefix: "/merged-service/" }
                          route: { cluster: merged-service }
                        - match: { prefix: "/" }
                          direct_response:
                            status: 404
                            body:
                              inline_string: not found
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: consul_envoy_xds_server
      connect_timeout: 0.25s
      type: STATIC
      http2_protocol_options: {}
      load_assignment:
        cluster_name: consul_envoy_xds_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 16000 }
    - name: success-service
      type: EDS
      connect_timeout: 0.25s
      eds_cluster_config:
        service_name: success-service
        eds_config:
          resource_api_version: v3
          api_config_source:
            api_type: GRPC
            transport_api_version: v3
            grpc_services:
              envoy_grpc: { cluster_name: consul_envoy_xds_server }
    - name: fail-service
      type: EDS
      connect_timeout: 0.25s
      eds_cluster_config:
        service_name: fail-service
        eds_config:
          resource_api_version: v3
          api_config_source:
            api_type: GRPC
            transport_api_version: v3
            grpc_services:
              envoy_grpc: { cluster_name: consul_envoy_xds_server }
    - name: merged-service
      type: EDS
      connect_timeout: 0.25s
      eds_cluster_config:
        service_name: merged-service
        eds_config:
          resource_api_version: v3
          api_config_source:
            api_type: GRPC
            transport_api_version: v3
            grpc_services:
              envoy_grpc: { cluster_name: consul_envoy_xds_server }
